  missing values that differ across series
- Fix bug: crash on generating LaTeX tabular output for a model
  estimated using robust standard errors (format string issue)
- Fix bug: the session "graph page" was not appearing even when
  a valid latex executable was available
- Fix bug: gretl console would not respond in case of an error when
  executing a command loop
- Improve efficiency of test for existence of helper programs on
  Linux/unix
- Add auto-lag option to the GUI dialog box for the ADF test
- Remember the options selected in the ADF dialog from one invocation
  to the next
- Help files: include menu-path information in the GUI help file as
  well as the script commands help
- Provide a mechanism for retrieving the value and/or p-value from
  the last statistical test performed (via the special variables
  "$test" and "$pvalue" in genr)
- "label" command: if only a varname is given, print the variable's
   current label, if any
- "genr unit": generates an index variable for the cross-sectional 
  units in a panel dataset (panel data only)
- Remove unused GUI popup menu item "Simulate..."
- Updates to documentation (manual and helpfiles)

01/19/2005 version 1.3.1
- Add new dataset structure "wizard" in place of the old dialogs
  for setting frequency, starting observation and time-series
  or panel interpretation of the data
- Add FIML and LIML estimation to system command; also add 
  LR over-identification tests for these systems
- Add Hansen-Sargan over-identification test for SUR and 3SLS
  system estimates
- Add "--iterate" option for estimation of systems via SUR and
  3SLS
- Add "estimate" command for equation systems, and modify the
  "system" command to allow the user to define named systems
- Add gui configuration for robust standard errors options
- VAR dialog: add options for robust standard errors, and for
  the printing of impulse responses
- Add univariate kernel density estimation (under the Variable