@@ -5296,7 +5296,7 @@ int gui_exec_line (char *line,
     case PRINT: case SIM: case SUMMARY:
     case MEANTEST: case VARTEST: case STORE:
     case RUNS: case SPEARMAN: case PCA:
-    case OUTFILE:
+    case OUTFILE: case RMPLOT: case HURST:
 	err = simple_commands(&cmd, line, &Z, datainfo, outprn);
 	if (err) errmsg(err, prn);
 	else if (cmd.ci == DATA) {
